# persist-mongo-template

./: #persist-mongo-template.cabal#  ChangeLog.md  README.md  fix-dependencies.sh  modelsMongo  persist-mongo-template.cabal
src/: #Main.hs#  .#Main.hs  ContentCfgTypes.hs  Main.hs  Mask.hs  Permissions.hs  SafeCopy.hs  WidgetTypes.hs
src/ContentCfgTypes/: AngularGaugeConfigObj.hs  AutoReportConfigObj.hs  CustomTableConfigObj.hs  CustomTableIdConfigObj.hs  MultiParameterHistoryConfigObj.hs  MultiParameterHistoryReportConfigObj.hs  ParameterHistoryConfigObj.hs  RollingReportConfigIdObj.hs  SplineConfigObj.hs  StatusConfigObj.hs  TableByLocConfigObj.hs  TableByMultiLocConfigObj.hs  TankConfigObj.hs  TankGaugeConfigObj.hs  Util.hs
src/Mask/: BuiltIns.hs  Types.hs
src/Persist/Mongo/: #Lens.hs#  .#Lens.hs  Lens.hs  Settings.hs
src/Persist/Mongo/Settings/: Internal.hs
src/Util/: CalendarUtil.hs
test/Persist/Mongo/: SettingsSpec.hs
