Name:                   persist-mongo-template
Version:                0.0.2
Author:                 Scott Murphy<scottmurphy09@gmail.com>
Maintainer:             Scott Murphy<scottmurphy09@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.2
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Persist.Mongo.Settings
                        Persist.Mongo.Lens
                        ContentCfgTypes
                        ContentCfgTypes.SplineConfigObj
                        ContentCfgTypes.Util
                        ContentCfgTypes.TankConfigObj
                        ContentCfgTypes.TankGaugeConfigObj
                        ContentCfgTypes.AngularGaugeConfigObj
                        ContentCfgTypes.AutoReportConfigObj
                        ContentCfgTypes.StatusConfigObj
                        ContentCfgTypes.ParameterHistoryConfigObj
                        ContentCfgTypes.MultiParameterHistoryConfigObj
                        ContentCfgTypes.TableByMultiLocConfigObj                        
                        ContentCfgTypes.TableByLocConfigObj

                        WidgetTypes

  Other-Modules:        Persist.Mongo.Settings.Internal
  Build-Depends:        base                     >= 4         &&   < 5
                       ,hspec                    >= 1.7.2     &&   < 1.7.3
                       ,safe                     >= 0.3.3     &&   < 0.4.3
                       ,text                     >= 0.11.3.1  &&   < 0.11.3.3
                       ,transformers             >= 0.3.0.0
                       ,lens                     >= 3.2       &&   < 3.9
                       ,containers
                       ,bytestring
                       ,time
                       ,old-locale
                       ,mongoDB
-- Going to try specifically leaving versions off for template style builds 

                       ,aeson
                       ,monad-control
                       ,network
                       ,yesod-core
                       ,yesod                  
                       ,template-haskell
                       ,persistent-template                       
                       ,persistent-mongoDB
                       ,persistent



Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       test
                        ,src
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , persist-mongo-template
                      , hspec


Executable persist-mongo-template
    main-is:            Main.hs
    HS-Source-Dirs:     src
    build-depends:      base
                                          
    ghc-options:      -threaded -O2 -rtsopts

Source-Repository head
  Type:                 git
--  Location:             
