Name:                   persist-mongo-template
Version:                0.2.4
Author:                 Scott Murphy<scottmurphy09@gmail.com>   
Maintainer:             Scott Murphy<scottmurphy09@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:           
Cabal-Version:          >= 1.8
Build-Type:             Simple
                        
Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Persist.Mongo.Settings
                        Persist.Mongo.Lens
                        SafeCopy
                        Mask
                        Mask.Types
                        Mask.BuiltIns
                        Permissions
                        ContentCfgTypes                        
                        ContentCfgTypes.SplineConfigObj
                        ContentCfgTypes.Util
                        ContentCfgTypes.TankConfigObj
                        ContentCfgTypes.TankGaugeConfigObj
                        ContentCfgTypes.AngularGaugeConfigObj
                        ContentCfgTypes.AutoReportConfigObj
                        ContentCfgTypes.StatusConfigObj
                        ContentCfgTypes.ParameterHistoryConfigObj
                        ContentCfgTypes.MultiParameterHistoryConfigObj
                        ContentCfgTypes.MultiParameterHistoryReportConfigObj
                        ContentCfgTypes.TableByMultiLocConfigObj                        
                        ContentCfgTypes.TableByLocConfigObj
                        ContentCfgTypes.CustomTableConfigObj
                        ContentCfgTypes.CustomTableIdConfigObj
                        ContentCfgTypes.RollingReportConfigIdObj
  
                        WidgetTypes

  Other-Modules:        Persist.Mongo.Settings.Internal
  Build-Depends:        base                     >= 4         &&   < 5
                       ,hspec                    >= 1.7.2     &&   < 1.7.3
                       ,safe                     >= 0.3.3     &&   < 0.4.3
                       ,text                     >= 0.11.3.1  &&   < 0.11.3.3
                       ,transformers             >= 0.3.0.0
                       ,lens                     >= 3.2       &&   < 3.9
                       ,aeson                    >= 0.7.0
                       ,safecopy                 >= 0.8.2
                       ,structured-script-lang   >= 0.1.1
                       ,unordered-containers     >= 0.2.3.3
                       ,hashable                 >= 1.2.1.0
                       ,cereal                   >= 0.4.0.1
                       ,parsec
                       ,containers
                       ,bytestring
                       ,time                     >= 1.4.1
                       ,old-locale
                       , unordered-containers          >= 0.2        && < 1.0

                       ,mongoDB
                       ,yaml                     >= 0.8.5.2
-- Going to try specifically leaving versions off for template style builds 
                       ,text
                       ,aeson
                       ,monad-control
                       ,network
                       ,yesod-core
                       ,yesod                  
                       ,template-haskell
                       ,persistent-template                       
                       ,persistent-mongoDB
                       ,persistent
                       

                       

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Hs-Source-Dirs:       test
                        ,src
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , persist-mongo-template
                      , persistent
                      , hspec
                      , yaml
                      , text
                      , aeson
                      , yesod                         
                      , time
                      , old-locale
                      , parsec
                      , transformers
                      , bytestring
                      , template-haskell
                      , network
                      , persistent-mongoDB
                      , containers
                      , unordered-containers
                      , lens

Executable persist-mongo-template
    main-is:            Main.hs
    HS-Source-Dirs:     src
    build-depends:      base
                      , persist-mongo-template
                      , persistent
                      , hspec
                      , yesod
                      , time
                      , old-locale
                      , yaml
                      , text
                      , aeson
                      , parsec
                      , transformers    
                      , bytestring
                      , template-haskell
                      , network
                      , persistent-mongoDB
                      , containers
                      , unordered-containers
                      , lens

    ghc-options:      -threaded -O2 -rtsopts

Source-Repository head
  Type:                 git
--  Location:             
