Name:                   persist-mongo-template
Version:                0.4.6
Author:                 Scott Murphy<scottmurphy09@gmail.com>   
Maintainer:             Scott Murphy<scottmurphy09@gmail.com>
License:                BSD3
License-File:           LICENSE
Synopsis:               Plow version of persistent-mongo-template
Description:            The description
Cabal-Version:          >= 1.8
Build-Type:             Simple
data-files:             modelsMongo
Library
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Persist.Mongo.Settings
                        Persist.Mongo.Lens
                        SafeCopy
                        Mask
                        Mask.Types
                        Mask.BuiltIns
                        Util.CalendarUtil
                        Permissions
                        ContentCfgTypes                        
                        ContentCfgTypes.SplineConfigObj
                        ContentCfgTypes.Util
                        ContentCfgTypes.TankConfigObj
                        ContentCfgTypes.TankGaugeConfigObj
                        ContentCfgTypes.AngularGaugeConfigObj
                        ContentCfgTypes.AutoReportConfigObj
                        ContentCfgTypes.StatusConfigObj
                        ContentCfgTypes.ParameterHistoryConfigObj
                        ContentCfgTypes.MultiParameterHistoryConfigObj
                        ContentCfgTypes.MultiParameterHistoryReportConfigObj
                        ContentCfgTypes.TableByMultiLocConfigObj                        
                        ContentCfgTypes.TableByLocConfigObj
                        ContentCfgTypes.CustomTableConfigObj
                        ContentCfgTypes.CustomTableIdConfigObj
                        ContentCfgTypes.RollingReportConfigIdObj
  
                        WidgetTypes

  Other-Modules:        Persist.Mongo.Settings.Internal
  Build-Depends:         base                     >= 4         &&   < 5
                       , text                     == 0.11.3.1
                       , transformers             == 0.3.0.0
                       , lens                     >= 4.1.2     &&   < 4.1.5
                       , aeson                    >= 0.7.0.2   &&   < 0.7.1
                       , safecopy                 == 0.8.3.7569
                       , structured-script-lang   == 0.1.5
                       , hashable                 == 1.2.1.0
                       , cereal                   == 0.4.0.1
                       , parsec                   == 3.1.5
                       , containers               == 0.5.0.0
                       , bytestring               == 0.10.0.2
                       , time                     == 1.4.2
                       , old-locale               == 1.0.0.5
                       , unordered-containers     >= 0.2.3.3 && < 0.2.4.1
                       , yaml                     == 0.8.8.1
                       , network                  == 2.4.2.2
                       , yesod-core               == 1.2.12
                       , yesod                    == 1.2.5.2
                       , template-haskell         == 2.8.0.0
                       , persistent-template      == 1.3.1.3                 
                       , persistent-mongoDB       == 1.3.0.4
                       , persistent               == 1.3.0.6
                       

                       

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Hs-Source-Dirs:       test
                        ,src
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , persist-mongo-template   
                      , persistent               
                      , hspec
                      , yaml                     
                      , text                     
                      , aeson                    
                      , yesod                                     
                      , time                     
                      , old-locale               
                      , parsec                   
                      , transformers             
                      , bytestring               
                      , template-haskell         
                      , network                  
                      , persistent-mongoDB       
                      , containers               
                      , unordered-containers     
                      , lens                     
                      , quickcheck               

Executable persist-mongo-template
    main-is:            Main.hs
    HS-Source-Dirs:     src
    build-depends:      base
                      , persist-mongo-template   
                      , persistent               
                      , yesod                    
                      , time                     
                      , old-locale               
                      , yaml                     
                      , text                     
                      , aeson                    
                      , parsec                   
                      , transformers             
                      , bytestring               
                      , template-haskell         
                      , network                  
                      , persistent-mongoDB       
                      , containers               
                      , unordered-containers     
                      , lens                     

    ghc-options:      -threaded -O2 -rtsopts

Source-Repository head
  Type:                 git
  Location:             https://github.com/plow-technologies/persist-mongo-template
